--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -15,3 +15,28 @@ jobs:
       - name: Correr script
         run: python hola_mundo.py
 
+on: pull_request
+jobs:
+  hola-mundo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Definir variable
+        run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
+      - name: Correr script
+        run: python hola_mundo_pull_req.py
+        
+on: schedule
+  - cron '15 30 * * *'
+jobs:
+  hola-mundo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Definir variable
+        run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
+      - name: Correr script
+        run: python hola_mundo_cron.py
+
