--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - aprendiendo-github-actions
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - aprendiendo-github-actions
+  schedule:
+    - cron: '15 30 * * *'
 jobs:
   hola-mundo:
     runs-on: ubuntu-latest
@@ -13,30 +19,11 @@ jobs:
       - name: Definir variable
         run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
       - name: Correr script
-        run: python hola_mundo.py
-
-on: pull_request
-jobs:
-  hola-mundo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Definir variable
-        run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
-      - name: Correr script
-        run: python hola_mundo_pull_req.py
-        
-on: schedule
-  - cron '15 30 * * *'
-jobs:
-  hola-mundo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Definir variable
-        run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
-      - name: Correr script
-        run: python hola_mundo_cron.py
-
+        run: |
+          if [ "${{ github.event_name }}" == "push" ]; then
+            python hola_mundo.py
+          elif [ "${{ github.event_name }}" == "pull_request" ]; then
+            python hola_mundo_pull_req.py
+          elif [ "${{ github.event_name }}" == "schedule" ]; then
+            python hola_mundo_cron.py
+          fi
