--- a/.github/workflows/expresiones.yml
+++ b/.github/workflows/expresiones.yml
@@ -1,28 +1,28 @@
 name: Expresiones
-run-name: Actividad 3
+run-name: ¡Estoy aprendiendo a usar Expresiones!
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
     inputs:
-      edad: 
+      edad:
         description: 'Edad'
         required: true
         type: integer
       nombre:
-        description: 'Nombre'
+        description: 'Tu nombre'
         required: true
-        default: 'Camilo'
+        default: 'Juan'
         type: string
-  jobs:
-    mayor:
-      if: ${{ inputs.edad >= 21}}
-      runs-on: ubuntu-latest
-      steps:
-        - name: Correr script Mayor de 21
-          run: echo ${{ inputs.name }} es mayor de 21
-    menor:
-      if: ${{ inputs.edad < 21}}
-      runs-on: ubuntu-latest
-      steps:
-        - name: Correr script Menor de 21
-          run: echo ${{ inputs.name }} es menor de 21
+jobs:
+  mayor:
+    if: ${{ inputs.edad >= 18 }} 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Correr script
+        run: echo ${{ inputs.nombre }} es mayor de edad
+  menor:
+    if: ${{ inputs.edad < 18 }} 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Correr script
+        run: echo ${{ inputs.nombre }} es menor de edad
     
